# streamdeck-rs

./: .gitignore  Cargo.toml  README.md  manifest.json
src/: gpu.rs  main.rs
